--- a/src/pages/paginaRedireccions.html
+++ b/src/pages/paginaRedireccions.html
@@ -17,7 +17,7 @@
     <header class="bg-tertiary text-center py-6 relative rounded-b-3xl shadow-lg">
         <h1 class="text-5xl font-bold text-secondary1" style="font-family: 'Comic Sans MS', sans-serif;">EcoVerse</h1>
         <!-- Logout Button -->
-        <a href="/public/index.html" class="absolute top-4 right-4 text-secondary1 text-3xl" aria-label="Logout">
+        <a href="/index.html" class="absolute top-4 right-4 text-secondary1 text-3xl" aria-label="Logout">
             <i class="fas fa-door-open"></i>
         </a>
     </header>
